samples/_failures_safe/1761555374_3bafbb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1b441009.c: In function ‘main’:
./samples/SAFE/__tmp_1b441009.c:165:18: error: ‘TO’ undeclared (first use in this function)
  165 |             case TO
      |                  ^~
./samples/SAFE/__tmp_1b441009.c:165:18: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_1b441009.c:165:13: error: expected ‘:’ or ‘...’ at end of input
  165 |             case TO
      |             ^~~~
./samples/SAFE/__tmp_1b441009.c:165:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1b441009.c:165:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1b441009.c:165:13: error: expected declaration or statement at end of input
